sgd/reproduction/playground/objects/SVMXC__Service_Order__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. Depending upon the service scenario, the order creation can be triggered by many events: When creating a Support Case, when one or more installed products require periodic service or calibration, when troubleshooting a customer problem on the field, if the field service engineer learns that the product requires specialized conditions of a factory/depot to resolve the problem, or when a new/repair shipment to customer requires specialized installation activity.</description>
    <fields>
        <fullName>SMAX_PS_Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Installed Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_AdminRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>業務担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Discount__c</fullName>
        <label>値引き額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndUserCd__c</fullName>
        <formula>SVMXC__Company__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>エンドユーザCD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expense_Percent__c</fullName>
        <label>諸経費パーセント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Force_Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>強制承諾</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_HITACHI_EDI_ItemNo__c</fullName>
        <label>HSL EDI 明細番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_InspectionLimitDate__c</fullName>
        <label>計量法検定期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Lead_Engineer__c</fullName>
        <formula>SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.Id = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lead Engineer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Logged_In_SAP_User__c</fullName>
        <formula>$User.SMAX_PS_SAPLicense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAPライセンス保持者</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MeterCategory__c</fullName>
        <label>濃度計区分</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_MeterCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ModelApprovalNo__c</fullName>
        <label>型式承認番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Parts_Expense_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>材料費_諸経費対象</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Plan_EndDate__c</fullName>
        <label>作業予定終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Plan_StartDate__c</fullName>
        <label>作業予定開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Plant__c</fullName>
        <label>プラント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Plant</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Qty__c</fullName>
        <label>数量</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recommended_Parts__c</fullName>
        <label>Recommended Parts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_CommonText__c</fullName>
        <label>SAP共通事項テキスト</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_ERP_ID__c</fullName>
        <externalId>true</externalId>
        <label>SMAX PS SAP ERP ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_EntryDate__c</fullName>
        <label>SAP実績登録日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_NetValueTotal__c</fullName>
        <label>受注金額（マニュアル）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>営業Gr.</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_SAP_SalesOffice__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOffice__c</fullName>
        <label>営業所</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOrderNo__c</fullName>
        <label>受注伝票No./契約伝票No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesOrg__c</fullName>
        <label>販売組織</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_TECO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAPサービス指図完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SecondDistributorCd__c</fullName>
        <formula>SMAX_PS_SecondDistributor__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>二次販社CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SecondDistributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>二次販社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (二次販社)</relationshipLabel>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Serial_Lot_Number__c</fullName>
        <label>HGS No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Contract_End_Date__c</fullName>
        <label>サービス契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Contract_Start_Date__c</fullName>
        <label>サービス契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス見積</label>
        <referenceTo>SVMXC__Quote__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipToCd__c</fullName>
        <formula>SMAX_PS_Shipto__r.SMAX_PS_CustomerCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>出荷先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Shipto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (出荷先)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldToCd__c</fullName>
        <formula>SMAX_PS_SoldTo__r.SMAX_PS_CustomerCd__c</formula>
        <label>受注先CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注先担当者 - (販社)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (受注先担当者 - (販社))</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>受注先 - (販社)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (受注先 - (販社))</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Subject__c</fullName>
        <label>件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Trigger_Time_05__c</fullName>
        <formula>(Now()-0.038)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Time 05</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_WO_Source__c</fullName>
        <label>WO Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone</fullName>
                    <default>true</default>
                    <label>Standalone</label>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_WorkType__c</fullName>
        <label>保全活動タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z01</fullName>
                    <label>FIXED BY PHONE</label>
                </value>
                <value>
                    <fullName>Z02</fullName>
                    <label>REPAIR</label>
                </value>
                <value>
                    <fullName>Z03</fullName>
                    <label>IN HOUSE REPAIR</label>
                </value>
                <value>
                    <fullName>Z04</fullName>
                    <label>SYSTEM INSTALLATION</label>
                </value>
                <value>
                    <fullName>Z05</fullName>
                    <label>INSPECTION BEFORE SHIPMENT OR</label>
                </value>
                <value>
                    <fullName>Z06</fullName>
                    <label>MAINTENANCE</label>
                </value>
                <value>
                    <fullName>Z07</fullName>
                    <label>UPGRADE</label>
                </value>
                <value>
                    <fullName>Z08</fullName>
                    <label>TRACEABILITY CERTIFICATE</label>
                </value>
                <value>
                    <fullName>Z09</fullName>
                    <label>VISIT FOR CUSTOMER TRAINING</label>
                </value>
                <value>
                    <fullName>Z10</fullName>
                    <label>QUOTATION</label>
                </value>
                <value>
                    <fullName>Z11</fullName>
                    <label>EMERGENCY REPAIR</label>
                </value>
                <value>
                    <fullName>Z12</fullName>
                    <label>HOT POINT FOLLOW UP / CUSTOMER</label>
                </value>
                <value>
                    <fullName>Z13</fullName>
                    <label>FIXED BY REMOTE SESSION</label>
                </value>
                <value>
                    <fullName>Z14</fullName>
                    <label>ADDITIONAL SPARE PARTS</label>
                </value>
                <value>
                    <fullName>Z15</fullName>
                    <label>UNINSTALLING EQUIPMENT</label>
                </value>
                <value>
                    <fullName>Z16</fullName>
                    <label>ENGINEERING SERVICES</label>
                </value>
                <value>
                    <fullName>Z17</fullName>
                    <label>SYSTEM REPAIR</label>
                </value>
                <value>
                    <fullName>Z18</fullName>
                    <label>COMPONENT REPAIR</label>
                </value>
                <value>
                    <fullName>Z19</fullName>
                    <label>REPAIR NOT COMPLETED</label>
                </value>
                <value>
                    <fullName>Z20</fullName>
                    <label>INSTALLATION NOT COMPLETED</label>
                </value>
                <value>
                    <fullName>Z21</fullName>
                    <label>MAINTENANCE NOT COMPLETED</label>
                </value>
                <value>
                    <fullName>Z22</fullName>
                    <label>Other or Courtesy Visit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Acknowledged_By_Technician_Date_Time__c</fullName>
        <description>Date and time when technician acknowledges the scheduled work order</description>
        <inlineHelpText>Date and time when technician acknowledges the scheduled work order</inlineHelpText>
        <label>Acknowledged By Technician Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Initial_Response__c</fullName>
        <description>Date/time on which customer was initial responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was initial responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Initial Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Onsite_Response__c</fullName>
        <description>Date/time on which customer was onsite responsed as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was onsite responsed as per commitment in SLA.</inlineHelpText>
        <label>Actual Onsite Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Resolution__c</fullName>
        <description>Date/time on which customer was resolved as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was resolved as per commitment in SLA.</inlineHelpText>
        <label>Actual Resolution</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Restoration__c</fullName>
        <description>Date/time on which customer was restored as per commitment in SLA.</description>
        <inlineHelpText>Date/time on which customer was restored as per commitment in SLA.</inlineHelpText>
        <label>Actual Restoration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Age_Bucket__c</fullName>
        <description>Age of the service order grouped in buckets for reporting purposes.</description>
        <formula>IF (SVMXC__Age__c &lt;= 7, &quot;Less Than 8 days&quot;, 
IF (SVMXC__Age__c &lt;= 15, &quot;8 To 15 days&quot;, 
IF (SVMXC__Age__c &lt;= 30, &quot;16 to 30 days&quot;, 
&quot;More Than 30 days&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the service order grouped in buckets for reporting purposes.</inlineHelpText>
        <label>Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Age__c</fullName>
        <description>Age of the service order for reporting purposes.</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the service order for reporting purposes.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Apply_Business_Hours_For_OptiMax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</description>
        <inlineHelpText>Flag to indicate if Preferred Window for Work Order is based on SLA/Access Hours</inlineHelpText>
        <label>Apply Business Hours For OptiMax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Appointment_Promised_Time_Slot__c</fullName>
        <label>Promised Arrival Window (GMT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Auto_Entitlement_Status__c</fullName>
        <label>Auto Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__BatchUpdate__c</fullName>
        <description>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</description>
        <inlineHelpText>This is an internal field used to resolve conflicts between immediate work order updates and batch updates done by OptiMax.</inlineHelpText>
        <label>Batch Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Billing_Type__c</fullName>
        <description>How the service order expenses will be accounted for. Agreement, Paid etc.</description>
        <inlineHelpText>How the service order expenses will be accounted for. Agreement, Paid etc.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Courtesy</fullName>
                </value>
                <value>
                    <fullName>Empowerment</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Booked_Appointment_Slot__c</fullName>
        <description>This field stores the slot information of the booked appointment.</description>
        <label>Booked Appointment Slot</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_Date_Time__c</fullName>
        <description>Date and time when technician rejects or cancels or dispatcher cancels the work order</description>
        <inlineHelpText>Date and time when technician rejects or cancels or dispatcher cancels the work order</inlineHelpText>
        <label>Canceled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Case from which this service order originated. Is a lookup to an existing salesforce case record</description>
        <inlineHelpText>Support Case from which this service order originated. Is a lookup to an existing salesforce case record</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the work order location.</description>
        <inlineHelpText>“City” part of the work order location.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Clock_Paused_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock Paused Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed this service order. Is a lookup to an existing salesforce user.</description>
        <inlineHelpText>User that closed this service order. Is a lookup to an existing salesforce user.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this service order was closed.</description>
        <inlineHelpText>Date/time when this service order was closed.</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account initiating this service order. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Customer Company initiating this service order. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Completed_Date_Time__c</fullName>
        <description>Date and time when technician completes (closes) the work order</description>
        <inlineHelpText>Date and time when technician completes (closes) the work order</inlineHelpText>
        <label>Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</inlineHelpText>
        <label>Component</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_After__c</fullName>
        <description>Snapshot of the product’s technical details after the engineer(s) resolved/addressed the issue</description>
        <inlineHelpText>Snapshot of the product’s technical details after the engineer(s) resolved/addressed the issue</inlineHelpText>
        <label>Configuration - After</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_Before__c</fullName>
        <description>Snapshot of the product’s technical details before the engineer(s) started addressing it</description>
        <inlineHelpText>Snapshot of the product’s technical details before the engineer(s) started addressing it</inlineHelpText>
        <label>Configuration - Before</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Corrective_Action__c</fullName>
        <description>Any corrective action taken by your engineer(s) to address the customer feedback</description>
        <inlineHelpText>Any corrective action taken by your engineer(s) to address the customer feedback</inlineHelpText>
        <label>Corrective Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the work order location</description>
        <inlineHelpText>“Country” part of the work order location</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Down_Status__c</fullName>
        <description>Indicates as Yes or No if this work order is about a customer down situation.</description>
        <formula>IF (SVMXC__Customer_Down__c = true, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Indicates as Yes or No if this work order is about a customer down situation.</inlineHelpText>
        <label>Customer Down Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the customer situation is critical affecting uptime due to the problem reported</description>
        <inlineHelpText>If the customer situation is critical affecting uptime due to the problem reported</inlineHelpText>
        <label>Customer Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Failure_Feedback__c</fullName>
        <description>Feedback given by the customer about the overall failure event and how your organization responded</description>
        <inlineHelpText>Feedback given by the customer about the overall failure event and how your organization responded</inlineHelpText>
        <label>Customer Failure Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dependency_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency Group</label>
        <referenceTo>SVMXC__Dependency_Management__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Now__c</fullName>
        <label>Dispatch Now</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Priority__c</fullName>
        <description>Work order priority bucket as defined in the dispatch process. Calculated automatically</description>
        <label>Dispatch Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dispatch process using which this work order will be scheduled</description>
        <label>Dispatch Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Response__c</fullName>
        <description>To capture the response of the technician whether he/she accepts or rejects the work order assigned.</description>
        <inlineHelpText>To capture the response of the technician whether he/she accepts or rejects the work order assigned.</inlineHelpText>
        <label>Dispatch Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Status__c</fullName>
        <description>Indicates in which stage the work order is in.</description>
        <formula>IF(AND( SVMXC__Service_Group__c=null , SVMXC__Group_Member__c =null),&quot;New&quot;, IF(AND( SVMXC__Service_Group__c&lt;&gt;null , SVMXC__Group_Member__c =null),&quot;Queued&quot;,IF(SVMXC__Group_Member__c &lt;&gt;null,&quot;Assigned&quot;,&apos;New&apos;)))</formula>
        <inlineHelpText>Indicates in which stage the work order is in.</inlineHelpText>
        <label>Dispatch Status</label>
        <type>Text</type>
    </fields>
</CustomObject>